16 November 2006: Wouter
	- Bug #153: now checks for FD_SETSIZE when adding fd to select fdset.

15 November 2006: Wouter
	- Fixed bug #152: identity keyword in nsd.conf did not work.
	  What happened was that the hostname() from the computer 
	  was overriding the nsd.conf identity. Fixed now.
	  If commandline is given that is used.
	  Else nsd.conf entry is used.
	  Else hostname() detected from computer is used.
	  Else default string "unidentified" is used.

14 November 2006: Wouter
	- Fixed bug where NSD tries to create 10000 udp sockets,
	  when starting with 10000 secondary zones. Limited to 50
	  at a time. The XFRD_MAX_UDP constant controls this.

3 November 2006: Wouter
	- Created tags/NSD_3_0_2_REL.

2 November 2006: Wouter
	- Added pdf for differences.tex for ease of use.
	- Updated text in readme on memory usage.

24 October 2006: Wouter
	- Recycle rrset memory after doing special processing on the deleted
	  rrset data.
	- log message clearer for 'duplicate xfr part' to 'discarding partial
	  xfr part'.
	- if you have a server that has IXFR turned off but sends a TC flag
	  for IXFR queries, xfrd will retry to TCP. This makes the use of
	  'AXFR' flag in nsd.conf file not needed in certain cases.
	- Be thrifty and save up the memory that was lost at end of chunks
	  in the recycle bin. Saved 1.3Mb on 170(rrs)/220(total) Mb dataset.

23 October 2006: Wouter
	- Added checks for out of memory in reload (diff file). And it exits
	  if so neatly.

13 October 2006: Wouter
	- Bug #149: Wrong text for NOTAUTH error code. When notify is not
	  authorised REFUSED error code returned instead.

4 October 2006: Wouter
	- More fixes from Koh-ichi Ito (kohi@iri.co.jp now), for bug #146,
	  his bash does not do $(( )), so nsdc.sh has to use test of course.

29 September 2006: Wouter
	- recyclebin works, added a test that uses it (about 3 Mb goes
	  through the recyclebin). This resolves bug #147.
	- Made -L 1 logging is little less verbose (-L 2 gets it all).